# Dream

./: .gitignore  README.md
Dream-Machine/: Cargo.toml
Dream-Machine/src/: main.rs  syscalls.rs  vm.rs
Dream-Machine/src/sys/: mod.rs
Dream-Machine/src/sys/unix/: io.rs  mod.rs
Dream-Machine/src/sys/windows/: io.rs  mod.rs
Example-Lang/: Cargo.toml  test.dasm  test.dream  test.exl
Example-Lang/src/: codegen.rs  ir.rs  main.rs  parser.rs
Morpheus/: Cargo.toml
Morpheus/src/: builder.rs  errors.rs  lib.rs  register_allocator.rs  version.rs
Morpheus/src/builder/: block_builder.rs  dream_builder.rs  mod.rs  proc_builder.rs
Morpheus/src/disasm/: disassembler.rs  mod.rs
Quicksand/: Cargo.toml
Quicksand/src/: errors.rs  inst.rs  lib.rs  register.rs
