[package]
name = "dream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
morpheus = { path = "../Morpheus" }

[target.'cfg(target_family = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["processenv", "winbase", "winuser"] }
